5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1811_2566.log
== SUBMITION (2019-06-11 19:07:57) 
-- CODE:
faltas = array(eval(input("digite as faltas : ")))
s,t,q,qi,st,sb = 0,0,0,0,0,0
for x in faltas:
	if(x==2):
		s= s + 1
	if(x==3):
		t= t + 1
	if(x==4):
		q= q + 1
	if(x==5):
		qi= qi + 1
	if(x==6):
		st = st + 1
	if(x==7):
		sb = sb+ 1
	z= zeros(6,dtype=int)
	z[0]= round(s/size(faltas)*100,1)
	z[1]= round(t/size(faltas)*100,1)
	z[2]= round(q/size(faltas)*100,1)
	z[3]= round(qi/size(faltas)*100,1)
	z[4]= round(st/size(faltas)*100,1)
	z[5]= round(sb/size(faltas)*100,1)
	print(z)
-- EXECUTION TIME:
0.59364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2566/main.py", line 1, in <module>
    faltas = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:07:58) 
-- CODE:
faltas = array(eval(input("digite as faltas : ")))
s,t,q,qi,st,sb = 0,0,0,0,0,0
for x in faltas:
	if(x==2):
		s= s + 1
	if(x==3):
		t= t + 1
	if(x==4):
		q= q + 1
	if(x==5):
		qi= qi + 1
	if(x==6):
		st = st + 1
	if(x==7):
		sb = sb+ 1
	z= zeros(6,dtype=int)
	z[0]= round(s/size(faltas)*100,1)
	z[1]= round(t/size(faltas)*100,1)
	z[2]= round(q/size(faltas)*100,1)
	z[3]= round(qi/size(faltas)*100,1)
	z[4]= round(st/size(faltas)*100,1)
	z[5]= round(sb/size(faltas)*100,1)
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    faltas = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:08:23) 
-- CODE:
from numpy import*
faltas = array(eval(input("digite as faltas : ")))
s,t,q,qi,st,sb = 0,0,0,0,0,0
for x in faltas:
	if(x==2):
		s= s + 1
	if(x==3):
		t= t + 1
	if(x==4):
		q= q + 1
	if(x==5):
		qi= qi + 1
	if(x==6):
		st = st + 1
	if(x==7):
		sb = sb+ 1
	z= zeros(6,dtype=int)
	z[0]= round(s/size(faltas)*100,1)
	z[1]= round(t/size(faltas)*100,1)
	z[2]= round(q/size(faltas)*100,1)
	z[3]= round(qi/size(faltas)*100,1)
	z[4]= round(st/size(faltas)*100,1)
	z[5]= round(sb/size(faltas)*100,1)
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:08:24) 
-- CODE:
from numpy import*
faltas = array(eval(input("digite as faltas : ")))
s,t,q,qi,st,sb = 0,0,0,0,0,0
for x in faltas:
	if(x==2):
		s= s + 1
	if(x==3):
		t= t + 1
	if(x==4):
		q= q + 1
	if(x==5):
		qi= qi + 1
	if(x==6):
		st = st + 1
	if(x==7):
		sb = sb+ 1
	z= zeros(6,dtype=int)
	z[0]= round(s/size(faltas)*100,1)
	z[1]= round(t/size(faltas)*100,1)
	z[2]= round(q/size(faltas)*100,1)
	z[3]= round(qi/size(faltas)*100,1)
	z[4]= round(st/size(faltas)*100,1)
	z[5]= round(sb/size(faltas)*100,1)
	print(z)
-- EXECUTION TIME:
1.25962
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[6 0 0 0 0 0]
[12  0  0  0  0  0]
[18  0  0  0  0  0]
[18  0  0  6  0  0]
[18  0  0 12  0  0]
[18  0  0 18  0  0]
[18  0  0 18  6  0]
[18  0  0 18 12  0]
[18  0  0 18 18  0]
[18  0  0 18 25  0]
[18  0  0 18 25  6]
[18  0  0 18 25 12]
[18  0  0 18 25 18]
[18  0  0 18 25 25]
[18  0  0 18 25 31]
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[4 0 0 0 0 0]
[4 4 0 0 0 0]
[4 8 0 0 0 0]
[4 8 4 0 0 0]
[4 8 8 0 0 0]
[ 4  8 12  0  0  0]
[ 4  8 16  0  0  0]
[ 4  8 16  4  0  0]
[ 4  8 16  8  0  0]
[ 4  8 16 12  0  0]
[ 4  8 16 16  0  0]
[ 4  8 16 20  0  0]
[ 4  8 16 20  4  0]
[ 4  8 16 20  8  0]
[ 4  8 16 20 12  0]
[ 4  8 16 20 16  0]
[ 4  8 16 20 20  0]
[ 4  8 16 20 20  4]
[ 4  8 16 20 20  8]
[ 4  8 16 20 20 12]
[ 4  8 16 20 20 16]
[ 4  8 16 20 20 20]
[ 4  8 16 20 20 24]
[ 4  8 16 20 20 28]
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
digite as faltas : [7 0 0 0 0 0]
[15  0  0  0  0  0]
[15  7  0  0  0  0]
[15  7  7  0  0  0]
[15  7 15  0  0  0]
[15  7 23  0  0  0]
[15  7 23  7  0  0]
[15  7 23  7  7  0]
[15  7 23  7 15  0]
[15  7 23  7 15  7]
[15  7 23  7 15 15]
[15  7 23  7 15 23]
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:08:33) 
-- CODE:
from numpy import*
faltas = array(eval(input("digite as faltas : ")))
s,t,q,qi,st,sb = 0,0,0,0,0,0
for x in faltas:
	if(x==2):
		s= s + 1
	if(x==3):
		t= t + 1
	if(x==4):
		q= q + 1
	if(x==5):
		qi= qi + 1
	if(x==6):
		st = st + 1
	if(x==7):
		sb = sb+ 1
	z= zeros(6,dtype=int)
	z[0]= round(s/size(faltas)*100,1)
	z[1]= round(t/size(faltas)*100,1)
	z[2]= round(q/size(faltas)*100,1)
	z[3]= round(qi/size(faltas)*100,1)
	z[4]= round(st/size(faltas)*100,1)
	z[5]= round(sb/size(faltas)*100,1)
print(z)
-- EXECUTION TIME:
0.875929
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:08:42) 
-- CODE:
from numpy import*
faltas = array(eval(input("digite as faltas : ")))
s,t,q,qi,st,sb = 0,0,0,0,0,0
for x in faltas:
	if(x==2):
		s= s + 1
	if(x==3):
		t= t + 1
	if(x==4):
		q= q + 1
	if(x==5):
		qi= qi + 1
	if(x==6):
		st = st + 1
	if(x==7):
		sb = sb+ 1
	z= zeros(6,dtype=int)
	z[0]= round(s/size(faltas)*100,1)
	z[1]= round(t/size(faltas)*100,1)
	z[2]= round(q/size(faltas)*100,1)
	z[3]= round(qi/size(faltas)*100,1)
	z[4]= round(st/size(faltas)*100,1)
	z[5]= round(sb/size(faltas)*100,1)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:09:14) 
-- CODE:
from numpy import*
faltas = array(eval(input("digite as faltas : ")))
s,t,q,qi,st,sb = 0,0,0,0,0,0
for x in faltas:
	if(x==2):
		s= s + 1
	if(x==3):
		t= t + 1
	if(x==4):
		q= q + 1
	if(x==5):
		qi= qi + 1
	if(x==6):
		st = st + 1
	if(x==7):
		sb = sb+ 1
z= zeros(6,dtype=int)
z[0]= round(s/size(faltas)*100,1)
z[1]= round(t/size(faltas)*100,1)
z[2]= round(q/size(faltas)*100,1)
z[3]= round(qi/size(faltas)*100,1)
z[4]= round(st/size(faltas)*100,1)
z[5]= round(sb/size(faltas)*100,1)
print(z)
-- EXECUTION TIME:
1.01693
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:09:18) 
-- CODE:
from numpy import*
faltas = array(eval(input("digite as faltas : ")))
s,t,q,qi,st,sb = 0,0,0,0,0,0
for x in faltas:
	if(x==2):
		s= s + 1
	if(x==3):
		t= t + 1
	if(x==4):
		q= q + 1
	if(x==5):
		qi= qi + 1
	if(x==6):
		st = st + 1
	if(x==7):
		sb = sb+ 1
z= zeros(6,dtype=int)
z[0]= round(s/size(faltas)*100,1)
z[1]= round(t/size(faltas)*100,1)
z[2]= round(q/size(faltas)*100,1)
z[3]= round(qi/size(faltas)*100,1)
z[4]= round(st/size(faltas)*100,1)
z[5]= round(sb/size(faltas)*100,1)
print(z)
-- EXECUTION TIME:
1.24248
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
digite as faltas : [15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:44:02) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = round((s/size(faltas)) * 100,1)
z[1] = round((t/size(faltas)) * 100,1)
z[2] = round((q/size(faltas)) * 100,1)
z[3] = round((qi/size(faltas)) * 100,1)
z[4] = round((sex/size(faltas)) * 100,1)
z[5] = round((sab/size(faltas)) * 100,1)
print(z)

-- EXECUTION TIME:
1.06178
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
